# collection-of-projects

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pubspec.yaml  pyproject.toml
Anime-Library-API/: README.md
Anime-Library-App/: README.md
Blog-API/: README.md  requirements.txt
Blog-App/: README.md  manage.py  requirements.txt
Calculator-App/: README.md  design.py  files_rc.py  main.py
Chat-App/: .gitignore  docker-compose.yml
Crud-Django-App/: .gitignore  README.md
Currency-Converter-App/: README.md  manage.py  requirements.txt
Django-Social-Network-API/: .gitignore  requirements.txt
Ecommerce-API/: .flake8  .gitignore  requirements.txt
Ecommerce-App/: README.md  requirements.txt
Expense-Accounting-App/: README.md
FastAPI-Auth-App/: .env  README.md  alembic.ini  main.py  requirements.txt
FastAPI-Course/: Dockerfile  docker-compose.yml  requirements.txt
FastAPI-Mini-CRUD/: config.py  crud.py  main.py  models.py  requirements.txt  routes.py  schemas.py
FastAPI-Redis-Microservices-App/: requirements.txt
FastAPI-Social-Media-App/: Dockerfile  alembic.ini  docker-compose.yml  main.py  requirements.txt
Flask-News-App/: .gitignore  README.md  config.py  requirements.txt
Foodgram-App/: .gitattributes  .gitignore  README.md  requirements.txt
Instagram-API/: README.md
Instagram-App/: requirements.txt
Instagram-Clone-App/: README.md  requirements.txt
Learn-Docker/: README.md  docker_commands.txt
Learning-FastAPI/: README.md  main.py  req.txt
Learning-Flask/: README.md  app.py  requirements.txt  sql_database.sql
Poetry/: README.md  pyproject.toml
Poetry/config/: settings.py  urls.py
React-Django-App/: README.md
React-To-Do-App/: package-lock.json
School-Telegram-Bot/: README.md  bot.py  config.py  creds.json  googlesheet_table.py  kb.py  requirements.txt  sqlite.py  table.py  timetablechanges.db
School-Telegram-Bot copy/: README.md  bot.py  creds.json  googlesheet_table.py  parse.py  sqlite.py  table.py  timetablechanges.db
Social-Network-App/: README.MD  requirements.txt
To-Do-App/: .gitignore  README.md  requirements.txt
Weather-App/: .gitignore  README.md  requirements.txt
Yatube-API/: README.md  requirements.txt
Yatube-App/: .gitignore  README.md  requirements.txt
bot/: README.md  consts.py  main.py
capybara-api/: .gitignore  README.md  setup.cfg
cbcu/: README.md  pyproject.toml
disco/: alembic.ini  main.py  readme.md  requirements.txt
django-fast-auth/: LICENSE  MANIFEST.in  README.rst  setup.cfg
django-fast-auth/fast_auth/: apps.py  email_backend.py  forms.py  urls.py  views.py
django-on-docker/: .env.dev  docker-compose.yml
django-user-authentication/: .gitignore
entranceit/: .gitignore  Dockerfile  README.md  docker-compose-local.yml
etlite/: .gitignore  pyproject.toml
fastapi-alembic-crud/: docker-compose.yml  pyproject.toml
fastapi-alembic-crud/src/: alembic.ini  database.py  main.py  models.py  schemas.py
fastapi-alembic-crud/src/migrations/: env.py
fastapi-social-media/: .gitignore
fastapi-social-network/: Dockerfile  docker-compose.yml  requirements.txt
fastapi-todo/: README.md  docker-compose.yml  pyproject.toml
fastapi-todo/src/: alembic.ini  config.py  db.py  main.py
fastapi-todo/src/api/: routers.py  schemas.py
fastapi-todo/src/migrations/: env.py
fastapi-todo/src/migrations/versions/: 605f28b24c93_create.py  f784a9ba671f_init.py
fastapi-todo/src/models/: models.py
github-cicd/: README.md
lib/: main.dart
library-api/: .gitignore  Dockerfile  pyproject.toml  setup.cfg
library-api/src/: main.py
library-api/src/core/: logger.py
linux/: CMakeLists.txt
litestar-hello-world/: Makefile  README.md  pyproject.toml
litestar-todo/: Makefile  pyproject.toml
movies-api/: .flake8  docker-compose-local.yml
movies-api2/: .gitignore  .isort.cfg
movies-api3/: .gitignore  .isort.cfg  .pre-commit-config.yaml
movies-api4/: .dockerignore  .gitignore  docker-compose-local.yml
pastebin/: LICENSE
pastebin-api/: .flake8  .gitignore  alembic.ini
pastebin-clone/: docker-compose.yml
pastebin-try/: .gitignore  docker-compose-local.yml
practix3/: docker-compose.yml
practix_bad_try/: README.md
remember/: docker-compose.yml
sch-old/: docker-compose-master.yml
school-competitions-platform/: Dockerfile.prod  README.md  docker-compose-local.yml  docker-compose-master.yml  requirements.txt  setup.cfg
school-event-management-system2/: .gitignore  Dockerfile  docker-compose-local.yml  docker-compose-master.yml  requirements.txt  setup.cfg
scripts/: merge.py  remove.py  remove_files.py  to_mp3.py
social-network/: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
src/: Window.cpp  Window.h  api.py  config.py  main.py
test/: widget_test.dart
text-editor/: CMakeLists.txt
tg-assistent/: docker-compose.yml  pyproject.toml
tg-assistent/src/handlers/: start.py  voice.py
tg-mail-client/: .gitignore  pyproject.toml
tg-mail-client/src/: main.py
tg-mail-client/src/handlers/: __init__.py
try-precommit/: .pre-commit-config.yaml  main.py
vedun/: .gitignore  README.md
vim-config/: README.md  init.vim
web/: index.html  (+1 more)
(+941 files in other folders)
