[project]
name = "dungeon"
version = "0.1.0"
description = "Dungeon game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv"]
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (PEP8)
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
default-section = "third-party"
force-wrap-aliases = true
split-on-trailing-comma = true
lines-after-imports = 2
combine-as-imports = true
order-by-type = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "preserve"
