[tool.poetry]
name = "tg-mail-client"
version = "0.1.0"
description = ""
authors = ["MironBerch"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
