[metadata]
name = django-fast-auth
version = 0.
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = https://github.com/MironBerch/collection-of-projects/django-fast-auth
author = MironBerch
author_email = mironberchetov@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0  
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0