[project]
name = "fastapi-alembic-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.2",
]
