[project]
name = "tg-assistent"
version = "0.1.0"
description = "Telegram assistent"
readme = ""
requires-python = ">=3.13"
dependencies = [
    "ffmpeg>=1.4",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "python-telegram-bot>=22.3",
    "speechrecognition>=3.14.3",
]
